firefox scrollbar fixed en arrow z-index add

--- a/styles/breakpoints.css
+++ b/styles/breakpoints.css
@@ -48,6 +48,9 @@
                 background-repeat: no-repeat;
                 background-size: contain;
                 animation: arrow 2s infinite;
+                z-index: 1;
+                -ms-overflow-style: none;  /* IE and Edge */
+                scrollbar-width: none;  /* Firefox */
             }
 
             &::-webkit-scrollbar {
