--- a/styles/header.css
+++ b/styles/header.css
@@ -208,6 +208,8 @@ header {
     div {
         height: 80%;
         overflow-y: scroll;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
 
         &::-webkit-scrollbar {
             display: none;
